--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "parcel": "^2.13.3"
+  }
 }
