Update app.js for to separate home from other pages

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "embee-website",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "home.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel app.js"
+    "start": "parcel home.js"
   },
   "author": "",
   "license": "ISC",
